version 9.0.
date: dd/mm/yyyy
  * renamed Project#getNewOntologyManager() to Project#getOntologyManager()
  * implemented a new exporter to create a Spreadsheet of a SKOS project
  * updated URIGenerators and RenderingEngines to the new extension mechanism (including the use of YAML to 
    persist their configurations/settings)
  * replaced sesame:nil with cl:null to fix incompatibility with recent versions of GDB (for sure, 9.6)
  * added the possibility to open/close all projects with a single service
  * added support for guessing a default repository configuration when creating a version dump in the default
    location (i.e. same as the core repository)
  * use an embedded unicode font (arial unicode ms) in PDF generated by invokable reporters and skos diff
    fixing an issue with Chinese text
  * fixed a bug in the replaceBaseURI which caused the removal of all Bnode in the working graph
  * added the passing of remote credentials to the skosDiffing tools
  * added the automatic opening of desired projects at startup
  * added the possibility to delete a version dump
  * added the possibility to configure the rendering engine and the uri generator after the initial project
    creation
  * added the possibility to set a project accessible by all the other
  * added the possibility to enable/disable blacklisting on projects with validation already enabled
  * added the possibility to delete triples via Sheet2RDF service addTriples()
  * added a new lexicographer view for streamlined editing of OntoLex-Lemon lexicons
  * updated to LexInfo 3
  * added the support for the Lucene index containing the Project's facets (creating the index and using it for
    the searches)
  * added the possibility to deactivate/activate the Collaboration System for a VB project without removing the
    credentials
  * added the possibility to remove a resource from an issue (Collaboration system: Jira and Freedcamp)
  * implemented project facets