@@ -1,30 +1,11 @@
 package it.uniroma2.art.semanticturkey.extension.impl.reformattingexporter.spreadsheetserializer;
 
-import java.io.File;
-import java.io.IOException;
-import java.nio.charset.StandardCharsets;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
-
-import javax.annotation.Nullable;
-
-import org.eclipse.rdf4j.model.IRI;
-import org.eclipse.rdf4j.model.Literal;
-import org.eclipse.rdf4j.model.Value;
-import org.eclipse.rdf4j.model.vocabulary.RDF;
-import org.eclipse.rdf4j.query.BindingSet;
-import org.eclipse.rdf4j.query.TupleQuery;
-import org.eclipse.rdf4j.query.TupleQueryResult;
-import org.eclipse.rdf4j.repository.RepositoryConnection;
-import org.eclipse.rdf4j.rio.helpers.NTriplesUtil;
-
 import it.uniroma2.art.semanticturkey.extension.extpts.reformattingexporter.ClosableFormattedResource;
 import it.uniroma2.art.semanticturkey.extension.extpts.reformattingexporter.ExporterContext;
 import it.uniroma2.art.semanticturkey.extension.extpts.reformattingexporter.ReformattingException;
 import it.uniroma2.art.semanticturkey.extension.extpts.reformattingexporter.ReformattingExporter;
+import it.uniroma2.art.semanticturkey.extension.extpts.reformattingexporter.ReformattingWrongLexModelException;
+import it.uniroma2.art.semanticturkey.extension.extpts.reformattingexporter.ReformattingWrongModelException;
 import it.uniroma2.art.semanticturkey.extension.impl.reformattingexporter.spreadsheetserializer.structures.CollectionInfo;
 import it.uniroma2.art.semanticturkey.extension.impl.reformattingexporter.spreadsheetserializer.structures.ConceptInfo;
 import it.uniroma2.art.semanticturkey.extension.impl.reformattingexporter.spreadsheetserializer.structures.ConceptSchemeInfo;
@@ -38,6 +19,25 @@ import it.uniroma2.art.semanticturkey.extension.impl.reformattingexporter.spread
 import it.uniroma2.art.semanticturkey.i18n.STMessageSource;
 import it.uniroma2.art.semanticturkey.project.Project;
 import it.uniroma2.art.semanticturkey.utilities.ModelUtilities;
+import org.eclipse.rdf4j.model.IRI;
+import org.eclipse.rdf4j.model.Literal;
+import org.eclipse.rdf4j.model.Value;
+import org.eclipse.rdf4j.model.vocabulary.RDF;
+import org.eclipse.rdf4j.query.BindingSet;
+import org.eclipse.rdf4j.query.TupleQuery;
+import org.eclipse.rdf4j.query.TupleQueryResult;
+import org.eclipse.rdf4j.repository.RepositoryConnection;
+import org.eclipse.rdf4j.rio.helpers.NTriplesUtil;
+
+import javax.annotation.Nullable;
+import java.io.File;
+import java.io.IOException;
+import java.nio.charset.StandardCharsets;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
 
 /**
  * A {@link ReformattingExporter} that serializes RDF data in Spreadsheet format
@@ -74,13 +74,13 @@ public class SpreadsheetSerializingExporter implements ReformattingExporter {
 
 		if(!exporterContext.getProject().getModel().equals(Project.SKOS_MODEL)){
 			//only SKOS Model should be used
-			throw new ReformattingException(STMessageSource.getMessage(MessageKeys.exceptionModel$messsage));
+			throw new ReformattingWrongModelException(STMessageSource.getMessage(MessageKeys.exceptionModel$messsage));
 		}
 
 		IRI lexModel = exporterContext.getProject().getLexicalizationModel();
 		if(!lexModel.equals(Project.SKOS_LEXICALIZATION_MODEL) && !lexModel.equals(Project.SKOSXL_LEXICALIZATION_MODEL)) {
 			//only SKOS and SKOSXL lexicalization are supported
-			throw new ReformattingException(STMessageSource.getMessage(MessageKeys.exceptionLexModel$messsage));
+			throw new ReformattingWrongLexModelException(STMessageSource.getMessage(MessageKeys.exceptionLexModel$messsage));
 		}
 
 		boolean isSkosxlLex = !lexModel.equals(Project.SKOS_LEXICALIZATION_MODEL);
